# AdventOfCode

./: .gitignore  Cargo.toml  README.md  collapse_lines.py  decode.py  makeday.sh
examples/now/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
examples/twenty_eighteen/: day10.rs  day14.rs  day18.rs  day19.rs  day20.rs  day21.c  day23.rs  day24.rs  day25.rs  day3.rs  day5.rs  day6.rs  day7.rs  day9.rs
examples/twenty_nineteen/: day1.rs  day10.rs  day11.rs  day17.rs  day17_prog  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day8.rs  intcode.rs  main.rs
examples/twenty_seventeen/: day1.rs  day10.rs  day11.rs  day18.rs  day19.rs  day20.rs  day25.rs  day3.rs  day4.rs  day5.rs  day9.rs
examples/twenty_twenty/: day13.rs  day15.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day6.rs  main.rs
examples/twenty_twenty_four/: day1.rs  day12.rs  day16.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day25.rs  day4.rs  day5.rs  day7.rs  day8.rs
examples/twenty_twenty_one/: day10.rs  day11.rs  day12.rs  day19.rs  day2.rs  (+10 more)
input/: day1  day13
src/: computer.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  lib.rs  macros.rs  main.rs  utils.rs
(+142 files in other folders)
