[package]
authors = ["Josiah Gaskin <josiah@optimizely.com>"]
edition = "2018"
name = "advent-of-code"
version = "0.1.0"
[dependencies]
chrono = "0.4"
cute = "0.3"
image = "0.22"
itertools = "0.8"
lazy_static = "1.4"
parking_lot = "0.10"
rand = "0.7"
rayon = "1.2"
regex = "1.3"
rust-crypto = "0.2"
num = "0.2"
nom = "5.0.1"
defaultmap = "0.4"