[package]
authors = ["Josiah Gaskin <josiah@josiahgaskin.com>"]
edition = "2021"
name = "aoc"
version = "0.1.0"

[profile.release]
debug = true

[dependencies]
cached = "0.54.0"
chrono = "0.4.23"
cute = "0.3.0"
image = "0.24.5"
itertools = "0.10.5"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.6.0"
regex = "1.7.0"
rust-crypto = "0.2.36"
num = "0.4.0"
nom = "7.1.1"
defaultmap = "0.5.0"
ring-algorithm = "0.6.1"
permutohedron = "0.2.4"
fnv = "1.0.7"
take-until = "0.1.0"
smallstr = "0.3.0"
